Add systemd installation support
Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/avahi-daemon.conf
+++ b/avahi-daemon.conf
@@ -23,7 +23,7 @@
 domain-name=local
 browse-domains=
 use-ipv4=yes
-use-ipv6=no
+use-ipv6=yes
 allow-interfaces=eth0,docker0
 #deny-interfaces=eth1
 #check-response-ttl=no
@@ -44,13 +44,13 @@ enable-wide-area=yes
 [publish]
 #disable-publishing=no
 #disable-user-service-publishing=no
-add-service-cookie=yes
+#add-service-cookie=yes
 publish-addresses=yes
 publish-hinfo=yes
 publish-workstation=yes
 publish-domain=yes
 #publish-dns-servers=192.168.50.1, 192.168.50.2
-#publish-resolv-conf-dns-servers=yes
+#publish-resolv-conf-dns-servers=no
 #publish-aaaa-on-ipv4=yes
 #publish-a-on-ipv6=no
 
